# free-agents

./: .env.example  .gitignore  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TODO.md  context.md  docker-compose.yml  pyproject.toml  replit.nix  requirements.txt  test_all_agents.sh  test_holistic.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-image.yml
app/: __init__.py  cli.py  cli_replit_deploy.py  config.py  dependencies.py  engine.py  examples.json  examples.py  main.py  mcp_server.py  models.py  preset_loader.py  providers.py  rate_limit.py  registry_adapter.py
app/catalog/: __init__.py  bundles.yaml  loader.py  recommendation.py  resolution.py  tools.yaml
app/evals/: __init__.py  matchers.py  runner.py
app/memory/: summarizer.py
app/presets/: __init__.py  classifier.yaml  extractor.yaml  meeting_notes.yaml  summarizer.yaml  tool_agent.yaml  triage.yaml
app/recommendations/: layered_mapping.py  tool_recommender.py
app/repo_to_agent/: __init__.py  agent_spec_bridge.py  app_flow.py  canonical_agent_id.py  code_tool_discovery.py  exceptions.py  internal_runner.py  models.py  openai_adapter.py  persistence.py  repo_classifier.py  service.py  (+6 more)
attached_assets/: content-1774830609020.md
demo/: DEMO.md  demo_request.py  demo_request.sh
docs/: agent-registry-progress.md  agent-runtime-part1-summary.md  agent-runtime-part2-summary.md  agent-runtime-part3-summary.md  agent-runtime-part4-summary.md  agent-runtime-part5-tools-bundles.md  agent-runtime-part6-evals.md  context-session-memory-progress.md  github-oauth-local.md  model1-agent-registry-deploy-progress.md  prompts-backend-agent.md  prompts-testing-agent.md  repo-to-agent-infra-checklist.md  repo-to-agent.md  target-functionality-spec.md
examples/: demo.sh  essays.txt  summarize_essay.sh
frontend/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: bootstrap.sh  check_github_oauth_local.sh  migrate_sqlite_to_postgres.py  run_repo_tool_wrapping_validation.py  run_repo_validation.py  run_tool_ingestion.py
tests/: conftest.py  test_agents.py  test_agents_api.py  test_all_agents.sh  test_canonical_agent_id.py  test_catalog.py  test_cli.py  test_cli_replit_deploy.py  test_code_tool_discovery.py  test_eval_runner.py  test_eval_store.py  test_evals_api.py  test_holistic.sh  test_invoke.py  test_matchers.py  test_memory_summary.py  test_presets.py  test_registry.py  test_registry_preview.py  test_repo_to_agent_agent_spec_bridge.py  test_repo_to_agent_app_flow.py  test_repo_to_agent_exceptions.py  test_repo_to_agent_internal_runner.py  test_repo_to_agent_models.py  test_repo_to_agent_openai_adapter.py  test_repo_to_agent_persistence.py  test_repo_to_agent_repo_classifier.py  test_repo_to_agent_service.py  test_repo_to_agent_templates.py  test_repo_to_agent_tool_discovery.py  test_repo_to_agent_validation.py  test_repo_to_agent_workflow.py  test_repo_tool_discovery.py  test_repo_tool_wrapper.py  test_runner_github_tool.py  test_runs.py  test_sessions.py  test_tool_ingestion_extractors.py  test_tool_ingestion_pipeline_and_persistence.py  test_tool_recommendations.py  (+2 more)
(+62 files in other folders)
