[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolbox"
version = "0.1.3"
description = "Standardized Agent Runtime — preset-based AI agent gateway with stable HTTP API"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Sharath Bhattiprolu", email = "sharathjb23@gmail.com" }]
keywords = ["agent", "llm", "gateway", "fastapi", "preset"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "jsonschema>=4.21.0,<5.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "cryptography>=44.0.1,<50.0.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "openai>=2.25.0,<3.0.0",
    "openai-agents>=0.0.0,<1.0.0",
    "parallel-web>=0.5.0,<1.0.0",
]

[project.urls]
Homepage = "https://free-agents.xyz"
Repository = "https://github.com/sharathb5/free-agents"
"Bug Tracker" = "https://github.com/sharathb5/free-agents/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
]

[project.scripts]
agent-toolbox = "app.cli:main"
free-agents = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["presets/*.yaml", "examples.json"]
